--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -175,7 +175,7 @@
                                             <th> AMTRETURNByDEBIT - {{this.AmountReturnByDebit}}</th>
                                             <th> TOTALAMOUNT - {{this.totalAmount}}</th>
                                             <th> OLD AMOUNT - {{this.oldPayment}}</th>
-                                            <th> ADVANCE AMOUNT - {{this.newPayment}}</th>
+                                            <th> ADVANCE AMOUNT - {{this.newPayment - this.AmountReturnByCredit}}</th>
                                         </tr>
                                     </thead>
                                 </table>
