--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -298,3 +298,11 @@ input::-webkit-inner-spin-button {
     padding: 2px 5px;
     color: #fff;
 }
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1300px) {
+   .card  {
+      zoom:70% !important
+    }
+  }
