--- a/server/views/arabic.ejs
+++ b/server/views/arabic.ejs
@@ -14,7 +14,7 @@
 
   .header {
     width: 100%;
-    height: 110px;
+    height: 115px;
   }
 
   .row .col1 {
@@ -25,7 +25,7 @@
   .row .col1 p {
     font-size: 10px;
     margin: 0;
-    line-height: 15px;
+    line-height: 13px;
   }
 
   .row .col2 {
@@ -45,7 +45,7 @@
     margin: 0;
     text-align: right;
     padding-right: 10px;
-    line-height: 15px;
+    line-height: 13px;
   }
 
   .row2 {
@@ -112,11 +112,11 @@
   }
 
   .maintbl table thead tr th {
-    font-size: 10px;
+    font-size: 9px;
   }
 
   .maintbl table tbody tr td {
-    font-size: 11px;
+    font-size: 9px;
     text-align: center;
   }
 
@@ -201,25 +201,23 @@
   <header class="header">
     <div class="row">
       <div class="col1">
-        <p>Shop Number 2 <br> Building number 3900 Al maha street, Bawshar Muscat, Sultanate of Oman</p>
-        <p>Phone number 97864350</p>
+        <p>Phone No. 97864350 <br> Building No.3900 <br> Al Maha Street, Bawshar <br> Muscat, Sultanate Of Oman</p>
         <p>E-mail: oman@lensbird.com</p>
         <p>Website: http://www.lensbird.com</p>
-        <p>CR No. 1286294, Tax Card: 8398611</p>
+        <p>CR No. 1286294, <br> Tax Card: 8398611</p>
         <p>VAT IN: OM1100116506</p>
       </div>
       <div class="col2">
-        <img src=<%=data.LogoURL%> alt="" width="30%" height="30%" >
-        <p style="font-size: 13px;margin: 0;"> لينسبيرد</p>
-        <h6 style="margin: 0;">LENSNBIRD<br> <span style="font-size: 12px;"></span></h6>
+        <img src=<%=data.LogoURL%> alt="" width="100%" height="100%" >
+        <p style="font-size: 45px;margin: 0;"> لينسبيرد</p>
+   
       </div>
       <div class="col3">
-        <p> رقم محل ٢
-          رقم بنايه ٣٩٠٠
-          شارع المها ، بوشر
+        <p> رقم الهاتف ٩٧٨٦٤٣٥٠ <br>
+          رقم بنايه ٣٩٠٠ <br>
+          شارع المها ، بوشر <br>
           سلطنة عمان ، مسقط
         </p>
-        <p>رقم الهاتف ٩٧٨٦٤٣٥٠</p>
         <p>oman@lensbird.com : البريد الالكتروني</p>
         <p>http://www.lensbird.com : الموقع</p>
         <p>1286294 : رقم السجل التجاري</p>
@@ -424,12 +422,7 @@
             <td>
               <%= index+1 %>
             </td>
-            <% if (data.shopdetails.HSNCode==="true" ){%>
-
-              <td>
-                <%=i.HSNCode%>
-              </td>
-              <%}%>
+           
                 <td style="text-align: left;">
                   <%=i.ProductName%>
                     <% if (i.Remark !=='undefined' ){%>
@@ -438,14 +431,15 @@
                             <%=i.Warranty%>
                               <%}%>
                 </td>
-                <td>
-                  <%=i.Quantity%>
-                </td>
-                <% if (data.shopdetails.Rate==="true" ){%>
+   <% if (data.shopdetails.Rate==="true" ){%>
                   <td>
                     <%=new Intl.NumberFormat(data.currencyLocale,{currency:data.currencyFormat}).format(i.UnitPrice)%>
                   </td>
                   <%}%>
+                <td>
+                  <%=i.Quantity%>
+                </td>
+             
                     <% if (data.shopdetails.Discounts==="true" ){%>
                       <td>
                         <%=new
