--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -732,7 +732,7 @@
                                                             {{t.PurchasePrice | number : '1.2-2'}}</td>
 
                                                         <td *ngIf="user.UserGroup === 'CompanyAdmin'" [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{ t.ModifyPurchasePrice | number : '1.2-2'}}</td>
+                                                            {{ t.Profit | number : '1.2-2'}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
