--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -84,10 +84,11 @@
                           <th class="text-left">MobileNo1</th>
                           <th class="text-left">MobileNo2</th>
                           <th class="text-left">PhoneNo</th>
+                          <th class="text-left">Address</th>
+                          <th class="text-left">Date</th>
                           <th class="text-left">Email</th>
                           <th class="text-left">DOB</th>
                           <th class="text-left">Anniversary</th>
-                          <th class="text-left">Address</th>
                           <th class="text-left">CreatedBy</th>
                           <th class="text-left">UpdatedBy</th>
                           <th class="text-left">ShopName</th>
@@ -112,10 +113,11 @@
                           <td class="text-left">{{data.MobileNo1}} </td>
                           <td class="text-left">{{data.MobileNo2}} </td>
                           <td class="text-left">{{data.PhoneNo}} </td>
+                          <td class="text-left">{{data.Address}} </td>
+                          <td class="text-left">{{dateFormat(data.VisitDate)}} </td>
                           <td class="text-left">{{data.Email}} </td>
                           <td class="text-left">{{dateFormat(data.DOB)}}</td>
                           <td class="text-left">{{dateFormat(data.Anniversary)}}</td>
-                          <td class="text-left">{{data.Address}} </td>
                           <td class="text-left">{{data.CreatedPerson}} </td>
                           <td class="text-left">{{data.UpdatedPerson}} </td>
                           <td class="text-left">{{data.ShopName}}
