--- a/server/views/arabic.ejs
+++ b/server/views/arabic.ejs
@@ -198,6 +198,7 @@
 
 
 <body>
+  <% if (data.shopdetails.ID == 14){%>
   <header class="header">
     <div class="row">
       <div class="col1">
@@ -216,7 +217,7 @@
         <p> رقم الهاتف ٩٧٨٦٤٣٥٠ <br>
           رقم بنايه ٣٩٠٠ <br>
           شارع المها ، بوشر <br>
-          سلطنة عمان ، مسقط
+          مسقط سلطنة عمان
         </p>
         <p>oman@lensbird.com : البريد الالكتروني</p>
         <p>http://www.lensbird.com : الموقع</p>
@@ -226,6 +227,66 @@
       </div>
     </div>
   </header>
+  <%}%>
+  <% if (data.shopdetails.ID == 13){%>
+  <header class="header">
+    <div class="row">
+      <div class="col1">
+        <p>Phone No. 97864350 <br> Building No. 1/3155 <br> Al Athaiba Street, Azaiba <br> Muscat, Sultanate of Oman</p>
+        <p>E-mail: oman@lensbird.com</p>
+        <p>Website: http://www.lensbird.com</p>
+        <p>CR No. 1286294, <br> Tax Card: 8398611</p>
+        <p>VAT IN: OM1100116506</p>
+      </div>
+      <div class="col2">
+        <img src=<%=data.LogoURL%> alt="" width="100%" height="100%" >
+        <p style="font-size: 45px;margin: 0;"> لينسبيرد</p>
+   
+      </div>
+      <div class="col3">
+        <p> رقم الهاتف ٩٧٨٦٤٣٥٠ <br>
+          رقم بنايه ٣١٥٥//١ <br>
+          العزيبة شارع العزيبة <br>
+          مسقط سلطنة عمان
+        </p>
+        <p>oman@lensbird.com : البريد الالكتروني</p>
+        <p>http://www.lensbird.com : الموقع</p>
+        <p>1286294 : رقم السجل التجاري</p>
+        <p>8398611 : البطاقة الضريبية</p>
+        <p>OM1100116506 : الرقم الضريبي</p>
+      </div>
+    </div>
+  </header>
+  <%}%>
+  <% if (data.shopdetails.ID == 15){%>
+  <header class="header">
+    <div class="row">
+      <div class="col1">
+        <p>Phone No. 97864350 <br> Sabco Centre, Al Qurum  <br> Muscat, Sultanate of Oman</p>
+        <p>E-mail: oman@lensbird.com</p>
+        <p>Website: http://www.lensbird.com</p>
+        <p>CR No. 1286294, <br> Tax Card: 8398611</p>
+        <p>VAT IN: OM1100116506</p>
+      </div>
+      <div class="col2">
+        <img src=<%=data.LogoURL%> alt="" width="100%" height="100%" >
+        <p style="font-size: 45px;margin: 0;"> لينسبيرد</p>
+   
+      </div>
+      <div class="col3">
+        <p> رقم الهاتف ٩٧٨٦٤٣٥٠ <br>
+          مركز سابكو القرم<br>
+          مسقط سلطنة عمان
+        </p>
+        <p>oman@lensbird.com : البريد الالكتروني</p>
+        <p>http://www.lensbird.com : الموقع</p>
+        <p>1286294 : رقم السجل التجاري</p>
+        <p>8398611 : البطاقة الضريبية</p>
+        <p>OM1100116506 : الرقم الضريبي</p>
+      </div>
+    </div>
+  </header>
+  <%}%>
 
   <section class="row2">
     <div class="col1">
