--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -83,7 +83,7 @@
                         <div class="body mt-md-1 mt-5 p-2">
                             <div class="row" *ngIf="gridview">
                                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                                    <div class="table-responsive">
+                                    <div >
                                         <table style="width:100%;" id="exportsss"
                                             class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
