--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -856,7 +856,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4  mb-0 col-1ModifyB" *ngFor="let gst of gst_detail">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">{{gst.GSTType}}</mat-label>
-                        <input matInput name="igstAmt" value="{{gst.Amount | number:'1.0-2'}}" disabled>
+                        <input matInput name="igstAmt" value="{{gst.Amount}}" disabled>
                         <mat-error>
                             TAX Amt is required
                         </mat-error>
