--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -7,7 +7,7 @@
                     <div class="header">
                         <div class="row">
                             <div class="col-lg-1 col-md-2 col-5">
-                                <h4>Customer <b>{{this.data.Category}}</b> </h4>
+                                <h4 style="font-weight: 600;">Customer <b>{{this.data.Category}}</b> </h4>
                             </div>
                             <div class="col-xl-2 col-lg-3 col-md-4 col-7 mr-md-2 mr-0 ms-md-auto"
                                 style="display: inherit; height: 20px;margin-top: 1px;color: black;">
@@ -1116,9 +1116,9 @@
                                                     <div class="col-md-6 col-3">
                                                         <mat-form-field class="example-full-width mb-0">
                                                             <mat-label>Diagnosis</mat-label>
-                                                            <input matInput type="text" name="Diagnosis"
-                                                                [(ngModel)]="other.Diagnosis">
-                                                        </mat-form-field>
+                                                            <textarea rows="1" matInput type="text" name="Diagnosis"
+                                                                [(ngModel)]="other.Diagnosis"> </textarea>
+                                                            </mat-form-field>
                                                     </div>
                                                     <div class="col-md-3 col-3">
                                                         <mat-form-field class="example-full-width mb-0">
@@ -1157,15 +1157,15 @@
                                                     <div class="col-md-3 col-3 mb-0" style="margin: 0; ">
                                                         <mat-form-field class="example-full-width mb-0">
                                                             <mat-label>Treatment</mat-label>
-                                                            <input matInput type="text" name="Treatment"
-                                                                [(ngModel)]="other.Treatment">
+                                                            <textarea rows="1" matInput type="text" name="Treatment"
+                                                                [(ngModel)]="other.Treatment"></textarea>
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col-md-3 col-3 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
                                                             <mat-label>Operation</mat-label>
-                                                            <input matInput name="Operation"
-                                                                [(ngModel)]="other.Operation" />
+                                                            <textarea rows="1" matInput name="Operation"
+                                                                [(ngModel)]="other.Operation" ></textarea>
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
@@ -1210,6 +1210,7 @@
                                                                             <mat-icon *ngIf="deleteCustomer"
                                                                                 class="deletes_icon ms-1"
                                                                                 (click)="deleteSpec(i,'other')">delete_forever</mat-icon>
+                                                                                <button (click)="otherOpne(Other,other)"  class="pdfpower  me-1 ms-1"><i class="fa fa-file-pdf"></i></button>
                                                                         </td>
                                                                         <td class="text-left">{{otherList.length - i }}
                                                                         </td>
@@ -1579,6 +1580,31 @@
                                             </div>
                                         </div>
 
+                                    </div>
+                                </div>
+                            </ng-template>
+                            <!--Contact Extra model popup end -->
+
+                            <!--Contact Extra model popup start -->
+                            <ng-template #Other role="document" let-modal>
+                                <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+                                    <h2 class="modal-title header pt-2" id="exampleModalLabel">Select Any One.
+                                    </h2>
+                                    <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
+                                        (click)="modal.dismiss('Cross click')"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row mt-3 mt-md-0">
+                                       <div class="col-12">
+                                        <mat-checkbox   class="example-margin ps-1" color="primary" name="otherSpec" [(ngModel)]="otherSpec"> Spec</mat-checkbox>
+                                       </div>
+                                       <div class="col-12">
+                                        <mat-checkbox  class="example-margin ps-1" color="primary" name="otherContant" [(ngModel)]="otherContant"> otherContant</mat-checkbox>
+                                       </div>
+                                       <div class="col-12">
+                                        <mat-checkbox  class="example-margin ps-1" color="primary" name="otherContant" [(ngModel)]="otherContant"> No Power</mat-checkbox>
+                                       </div>
+                                     
                                     </div>
                                 </div>
                             </ng-template>
