--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -36,7 +36,7 @@
       <div class="row1">
          <div class="col-1">
             <p class="cus_p">Name </p>
-            <p class="cus_p">MoblieNo </p>
+            <p class="cus_p">Moblie </p>
             <p class="cus_p">Address </p>
          </div>
          <div class="col-2">
@@ -55,7 +55,15 @@
          <div class="col-2">
             <p class="cus_p"> : <%=data.customer.VisitDate%> </p>
             <p class="cus_p"> : <%=data.customer.PhoneNo%> </p>
+            <% if (data.mode === 'spectacle') { %>
             <p class="cus_p"> : <%=data.spectacle.RefferedByDoc%></p>
+            <%} %>
+            <% if (data.mode === 'contact') { %>
+            <p class="cus_p"> : <%=data.contact.RefferedByDoc%></p>
+            <%} %>
+            <% if (data.mode === 'other') { %>
+            <p class="cus_p"> : <%=data.other.RefferedByDoc%></p>
+            <%} %>
          </div>
       </div>
    </section>
@@ -68,6 +76,17 @@
       <% if (data.mode === 'contact') { %>
       <h6 <% %> style="color: <%= data.Color %>;"> Contact RX</h6>
       <%} %>
+      <!-- other title name  -->
+      <% if (data.otherSpec === true) { %>
+         <h6 <% %> style="color: <%= data.Color %>;"> Spectacle RX</h6>
+         <%} %>
+         <% if (data.otherContant === true) { %>
+         <h6 <% %> style="color: <%= data.Color %>;"> Contact RX</h6>
+         <%} %>
+         <% if (data.otherNoPower === true) { %>
+         <h6 <% %> style="color: <%= data.Color %>;"> Other RX</h6>
+         <%} %>
+      <!-- other title name  -->
    </section>
     <!-- power spec -->
    <% if (data.mode === 'spectacle') { %>
@@ -229,6 +248,143 @@
         </table>
       </section>
       <%} %>
+
+   <% if (data.mode === 'other') { %>
+      <% if (data.otherNoPower === false) { %>
+      <section class="power_spec">
+         <table class="tbl0">
+            <tr style="background-color: rgb(211, 211, 211);">
+               <th> </th> 
+             </tr>
+            <tr>
+               <th></th>
+            </tr>
+            <tr>
+              <td class="top_btm"> DP-</td> 
+            </tr>
+            <tr>
+               <td> NP- </td> 
+             </tr>
+         </table>
+         <table class="tbl1">
+            <tr style="background-color: rgb(211, 211, 211);">
+               <th> </th> 
+               <th> </th> 
+               <th>Right </th> 
+               <th> </th> 
+               <th> </th> 
+             </tr>
+            <tr>
+               <th  >SPH</th>
+               <th  >CYL</th>
+               <th>AXIS</th>
+               <th >VA</th>
+               <th  >ADD</th>
+            </tr>
+            <tr>
+              <td class="top_btm"> <%=data.powerList.REDPSPH%> </td> 
+              <td class="top_btm"> <%=data.powerList.REDPCYL%> </td> 
+              <td class="top_btm"> <%=data.powerList.REDPAxis%> </td> 
+              <td class="top_btm"> <%=data.powerList.REDPVA%> </td> 
+              <td class="top_btm"> <%=data.powerList.R_Addition%> </td> 
+            </tr>
+            <tr>
+               <td> <%=data.powerList.RENPSPH%> </td> 
+               <td> <%=data.powerList.RENPCYL%> </td> 
+               <td> <%=data.powerList.RENPAxis%> </td> 
+               <td> <%=data.powerList.RENPVA%> </td> 
+               <!-- <td> <%=data.powerList.R_Addition%> </td>  -->
+             </tr>
+         </table>
+   
+        <table class="tbl2">
+         <tr style="background-color: rgb(211, 211, 211);"> 
+            <th> </th> 
+            <th> </th> 
+            <th>Left </th> 
+            <th> </th> 
+            <th> </th> 
+         </tr>
+         <tr>
+           <th>SPH</th>
+           <th>CYL</th>
+           <th>AXIS</th>
+           <th>VA</th>
+           <th>ADD</th>
+         </tr>
+         <tr>
+           <td class="top_btm"> <%=data.powerList.LEDPSPH%> </td> 
+           <td class="top_btm"> <%=data.powerList.LEDPCYL%> </td> 
+           <td class="top_btm"> <%=data.powerList.LEDPAxis%> </td> 
+           <td class="top_btm"> <%=data.powerList.LEDPVA%> </td> 
+           <td class="top_btm"> <%=data.powerList.L_Addition%> </td> 
+         </tr>
+         <tr>
+           <td > <%=data.powerList.LENPSPH%> </td> 
+           <td > <%=data.powerList.LENPCYL%> </td> 
+           <td > <%=data.powerList.LENPAxis%> </td> 
+           <td > <%=data.powerList.LENPVA%> </td> 
+           <!-- <td> <%=data.powerList.L_Addition%> </td>  -->
+         </tr>
+        </table>
+      </section>
+      <%} %>
+
+      <section>
+         <table style="width: 50%; float: right; font-size: 15px; text-align: left; ">
+
+            <tr>
+                <th rowspan="2" >VN : -</th>
+                <td style="text-align: left;">R - <%=data.other.R_VN%></td>
+            </tr>
+            <tr>
+                <td>L - <%=data.other.L_VN%></td>
+            </tr>
+            <tr>
+                <th rowspan="2">TN : -</th>
+                <td>R - <%=data.other.R_TN%></td>
+            </tr>
+            <tr>
+                <td>L - <%=data.other.L_TN%></td>
+            </tr>
+            <tr>
+                <th rowspan="2">SY/KR : -</th>
+                <td>R - <%=data.other.R_KR%></td>
+            </tr>
+            <tr>
+                <td>L - <%=data.other.L_KR%></td>
+            </tr>
+
+            <tr >
+                <th style="padding-top: 20px;">IOL Power:</th>
+                <td style="padding-top: 20px;"><%=data.other.IOL_Power%></td>
+            </tr>
+            <tr>
+                <th style="padding-top: 20px;">Operation:</th>
+                <td style="padding-top: 20px;"><%=data.other.Operation%></td>
+            </tr>
+
+            <tr>
+                <th style="padding-top: 20px;">Sugar:</th>
+                <td style="padding-top: 20px;"><%=data.other.Sugar%></td>
+            </tr>
+            <tr>
+                <th style="padding-top: 20px;">B.P.:</th>
+                <td style="padding-top: 20px;"><%=data.other.BP%></td>
+            </tr>
+            <tr>
+                <th style="padding-top: 20px;">Diagnosis:</th>
+                <td style="padding-top: 20px;"><%=data.other.Diagnosis%></td>
+            </tr>
+            <tr>
+                <th style="width: 20px; padding-top: 20px;">Treatment:</th>
+                <td style="padding-top: 20px;"><%=data.other.Treatment%></td>
+            </tr>
+
+        </table>
+      </section>
+   <%} %>
+
     <!-- footer -->
     <div class="rowFooter">
           <div class="col1">
