--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -292,14 +292,17 @@ input::-webkit-inner-spin-button {
 
 .whatsapp {
     font-size: 17px;
-    background: #3ce31a;
+    background-color: #3ce31a;
     border: none;
     border-radius: 19px;
     padding: 2px 5px;
     color: #fff;
 }
 
-
+button:disabled.whatsapp {
+    background-color: #bdbdbd !important;
+    color: #878787 !important;
+}
 
 @media screen and (min-width: 768px) and (max-width: 1300px) {
    .card  {
