--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -62,41 +62,47 @@
                  <%}%>
 
                  <% if (data.CompanyID == 64 ){%> 
-                    <table style="margin-left: -10px; margin-top: -9px; ">
+                    <table style="margin-left: -10px; margin-top: 0px;  ">
                         <tr>
-                            <th  style="width: 280px; padding: 0;">
+                            <th  style="width: 180px; padding: 0;">
+                                <div style="height: 120px; padding-top: 0px;">
+
+                               
                                 <div
-                                    style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                    style=" font-size: 18px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                                     <%=i.BarcodeName%>
                                 </div>
                                 <div>
                                     <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
-                                        jsbarcode-textmargin="0" jsbarcode-height="48" jsbarcode-marginTop="-15"
-                                        jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                        jsbarcode-textmargin="0" jsbarcode-height="60" jsbarcode-marginTop="-15"
+                                        jsbarcode-fontSize="20" jsbarcode-marginBottom="0" jsbarcode-width="2"
                                         jsbarcode-fontoptions="bold">
                                     </svg>
                                     <script>
                                         JsBarcode(".barcode").init();
                                     </script>
                                 </div>
+                            </div>
                             </th>
-                            <th  style="width:550px;  padding: 0 !important; margin: 0 !important; ">
+                            <th  style="width:800px;  padding: 0 !important; margin: 0 !important; ">
+                                <div style="padding-left: 280px; height: 125px; padding-top: 2px;">
                                 <div
-                                    style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 200px;">
+                                    style="text-align: left; font-size: 26px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
                                                MRP  <%=i.RetailPrice%>    
                                          
                                 </div>
                                 <div
-                                    style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 200px; font-family: verdana ;">
+                                    style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px; font-family: verdana ;">
                                     (Inc. of all Taxes) </div>
                                 <div
-                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 200px;">
+                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;">
                                     <%=i.ProductBrandName%>
                                 </div>
                                 <div
-                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 200px;">
+                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;">
                                     <%=i.ProductModelName%>
                                 </div>
+                            </div>
                             </th>
                         </tr>
                     </table>
