--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -131,7 +131,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>BarCode</mat-label>
                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
-                            (keydown.Tab)="getSearchByBarcodeNo()" required #SearchBarCodecontrol autocomplete="off"
+                            (blur)="getSearchByBarcodeNo()" required #SearchBarCodecontrol autocomplete="off"
                             appAutoFoucsDirectives>
                     </mat-form-field>
                 </div>
